fixing layout issues

--- a/styles.scss
+++ b/styles.scss
@@ -101,7 +101,7 @@ body {
         color: $white;
         background-color: $primary-color-dark-blue;
         width: 90%;
-        height: 82%;
+        height: 80%;
         border-radius: 0.5rem;
         overflow: auto;
         display: flex;
@@ -113,8 +113,10 @@ body {
             text-align: center;
             width: 81%;
             height: 60%;
-            margin: 1.7rem auto;
-
+            @media screen and (max-width: 600px) {
+                margin: 2.5rem auto;
+                margin-top: 3.5rem;
+            }
             .heading {
                 font-size: 1.85rem;
                 line-height: 1.1;
@@ -129,7 +131,9 @@ body {
             .details {
                 color: $slightly-transparent-white-2;
                 font-size: $font-size;
-                margin-top: -1.4rem;
+                width: 100%;
+                // margin-top: -1.4rem;
+                margin: 1rem;
             }
 
             .info {
